# BFE-Chatbot-Joule-Verne

./: .dockerignore  .gitignore  .inspector-ignore  Dockerfile  README.md  agent.py  batch_loading.py  batch_parsing.py  docker-compose.yml  lambda.py  lambda_processing.py  load_into_s3.py  parsing.py  requirements.txt
.github/workflows/: upload-to-ecr.yml
.streamlit/: config.toml
backend/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
backend/src/jouleverne/: __main__.py  app.py  config.py
backend/src/jouleverne/models/: chat.py  documents.py  feedback.py
backend/src/jouleverne/routes/: __init__.py  chat.py  documents.py  feedback.py  releases.py  sources.py
backend/src/jouleverne/services/: agent.py  clients.py  documents.py  error_handler.py  feedback.py  security.py
data/: all_pdf_data.json  filtered_data.csv  metadata.jsonl  pages_urls.csv
docs/: chatbot-instructions.docx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ChatInput.vue  ChatMessage.vue  ChatWindow.vue  DocumentUpload.vue  FeedbackWidget.vue  FooterComponent.vue  HeaderComponent.vue  SearchModeToggle.vue  SourcesSidebar.vue  (+1 more)
pages/: release_notes.py
scripts/: fetch_releases.py
src/: change_name.py  document_processing.py  load_into_s3.py  upload_data_to_s3.py  upload_to_knowledge_base.py  utils.py  webscraping.py
src/archive/: batch_loading.py
utils/: batch_loading.py  change_name.py  upload_data_to_s3.py  webscraping.py
(+9 files in other folders)
